configs/Roma/iptables
# Generated by iptables-save v1.8.7 on Tue Dec 10 17:07:33 2024
*filter
:INPUT ACCEPT [87:9536]
:FORWARD ACCEPT [1120:175017]
:OUTPUT ACCEPT [90:7013]
-A INPUT -p tcp -m tcp --dport 24158 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 24073 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 24013 -j ACCEPT
-A FORWARD -s 10.179.7.67/32 -p tcp -m tcp --dport 25 -j DROP
-A FORWARD -s 10.179.7.67/32 -p tcp -m tcp --dport 23 -j DROP
COMMIT
# Completed on Tue Dec 10 17:07:33 2024
# Generated by iptables-save v1.8.7 on Tue Dec 10 17:07:33 2024
*nat
:PREROUTING ACCEPT [120:8535]
:INPUT ACCEPT [10:816]
:OUTPUT ACCEPT [25:1881]
:POSTROUTING ACCEPT [113:8143]
-A PREROUTING -p tcp -m tcp --dport 24158 -j DNAT --to-destination 10.179.7.2:22
-A PREROUTING -p tcp -m tcp --dport 24073 -j DNAT --to-destination 10.179.7.67:22
-A PREROUTING -p tcp -m tcp --dport 24013 -j DNAT --to-destination 10.179.7.130:22
-A PREROUTING -i to-host -p udp -m udp --dport 9080 -j DNAT --to-destination 10.179.7.66:9123
-A POSTROUTING -o sw0.4 -j MASQUERADE
-A POSTROUTING -d 10.179.7.66/32 -o sw0.5 -p udp -m udp --dport 9123 -j SNAT --to-source 172.30.106.241
COMMIT
# Completed on Tue Dec 10 17:07:33 2024
